--- a/structured_output_example/pyproject.toml
+++ b/structured_output_example/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 langchain = "^0.3.4"
 langchain-openai = "^0.2.3"
 poetry-dotenv = "^0.4.0"
+poetry-dotenv-plugin = "^0.2.0"
 
 
 [build-system]
